<resources>
    <string name="app_name">Trasholution</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="titleWelcome">WELCOME</string>
    <string name="titleHow">HOW IT WORKS</string>
    <string name="titleCraftAndConnect">CRAFT AND CONNECT</string>
    <string name="contentWelcome">Welcome to Trasholution! Your daily waste advisor. This application is designed to help you identify different types of waste and provide useful advice on how to handle them responsibly. By using this app, you can contribute to a cleaner environment and make informed decisions about waste disposal. Lets get started!</string>
    <string name="contentHow">With Trasholution, you can easily identify different types of waste materials. Simply take a photo of the item and our advanced image recognition technology will analyze it to determine the appropriate category. Whether its plastic, paper, glass, electronic or organic waste, we have got you covered.</string>
    <string name="contentCraftAndConnect">Trasholution goes beyond waste identification. We inspire creativity by offering craft ideas using everyday waste items. Learn how to transform discarded materials into beautiful and useful creations. Trasholution also connects you with local waste collectors, making responsible waste disposal easier than ever.  Together, we can make a significant impact on the environment and build a sustainable future. Lets turn trash into treasure!</string>
    <string name="logout">logout</string>
    <string name="retry">RETRY</string>
    <string name="username">Username</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="created_date">created date</string>
    <string name="processed_waste">waste idea</string>
    <string name="uploadedAt">Uploaded at: %s</string>
    <string name="desc">Description:\n%s</string>
    <string name="pengepul_list">WASTE COLLECTORS</string>
    <string name="contact">Contact</string>
    <string name="description">Description</string>
    <string name="location">Detail Location</string>
    <string name="tambah_pengepul">Add Collector</string>
    <string name="list_article">WASTE IDEAS</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="title">Title</string>
    <string name="type_of_waste">Type of Waste</string>
    <string name="search_hint">find something…</string>
    <string name="find_more">Find More</string>
    <string name="ewaste_handling">This kind of waste presents opportunities for recycling, reuse, and resource recovery. It can be transformed into new products, reducing environmental impact and promoting sustainability.</string>
    <string name="foodscrap_handling">This kind of waste offer valuable potential for composting and organic recycling. By diverting them from landfills, we can reduce methane emissions and create nutrient-rich compost for healthier soil and sustainable agriculture.</string>
    <string name="glass_handling">This kind of waste holds significant potential for recycling and resource conservation. By recycling glass, we can reduce energy consumption and raw material extraction. It can be transformed into new glass products, promoting a circular economy and environmental sustainability.</string>
    <string name="metalwaste_handling">This kind of waste carries immense potential for recycling and resource conservation. By recycling metals, we reduce the need for raw material extraction, conserve energy, and minimize environmental impact. It can be transformed into new metal products, fostering a sustainable and circular economy.</string>
    <string name="paperwaste_handling">This kind of waste holds great potential for recycling and sustainability. By recycling paper, we conserve forests, reduce energy consumption, and minimize waste in landfills. It can be transformed into new paper products, promoting a circular economy and environmental stewardship.</string>
    <string name="plasticwaste_handling">This kind of waste presents a critical opportunity for recycling and environmental responsibility. By recycling plastics, we reduce pollution, conserve resources, and mitigate the impact on ecosystems. It can be transformed into new plastic products, promoting a circular economy and a cleaner planet.</string>
    <string name="try_again">Try Again</string>
    <string name="textilewaste_handling">This kind of waste holds immense potential for recycling and sustainability. By recycling textiles, we reduce landfill waste, conserve resources, and minimize environmental impact. It can be transformed into new textiles or repurposed, promoting a circular economy and responsible fashion practices.</string>
    <string name="organicwaste_handling">This kind of waste offers significant potential for composting and nutrient recycling. By composting organic waste, we can enrich soil, reduce methane emissions, and promote sustainable gardening and agriculture practices. It\'s a natural way to close the loop and support a greener environment.</string>
    <string name="no_handling">Sorry, we don\'t have data about this waste</string>
    <string name="fail_getlocation">failed to retrieve location</string>
    <string name="need_location">need permission to access location</string>
    <string name="add_article">ADD ARTICLE</string>
    <string name="join_collector">Join As a Collector</string>
    <string name="update_collector">Update Collector</string>
    <string name="update_pengepul">Update Pengepul</string>
    <string name="alert">Alert!</string>
    <string name="yousure">You Sure Want to Log Out?</string>
    <string name="waste_identification_and_advisor">WASTE IDENTIFICATION AND ADVISOR</string>
    <string name="waste_companion">WASTE COMPANION</string>
    <string name="sustainable_living">SUSTAINABLE LIVING</string>
    <string name="contentAbout1">At Trasholution, we are dedicated to revolutionizing waste management and empowering individuals to make a positive impact on the environment. Our Android application is designed to simplify waste identification and provide valuable recycling advice, while also fostering a community of creative recycling enthusiasts.</string>
    <string name="our_mission">Our Mission:</string>
    <string name="about_closing1">Join the Trasholution and unlock the potential of waste. Together, we can simplify waste identification, inspire creative repurposing, and foster connections between individuals and waste collectors.</string>
    <string name="about_closing2">We value your feedback and suggestions. If you have any questions or ideas on how we can improve our application, please dont hesitate to reach out to us. Thank you for choosing Trasholution!</string>
    <string name="our_mission_content">to make waste identification and recycling easier, while also promoting the creative repurposing of waste materials. We believe waste has the potential to become a valuable resource, and we aim to connect individuals with waste collectors to facilitate responsible disposal and encourage the creation of useful items from waste.</string>
    <string name="key_features_of_trasholution">Key Features of Trasholution:</string>
    <string name="key_features_1">Waste Identification Made Easy. Trasholution makes waste identification a breeze using your smartphones camera. Our advanced technology quickly analyzes captured images and provides accurate information about the recyclability of the waste item. With just a few taps, you can determine the best way to dispose of the waste and contribute to a cleaner environment.</string>
    <string name="key_features_2">Creative Repurposing Hub. At Trasholution, we believe in the creative potential of waste materials. Our platform features a vibrant community of recyclers who share their ideas, projects, and tutorials on transforming waste into useful items. Explore innovative repurposing ideas, step-by-step guides, and success stories that will inspire you to turn waste into valuable creations.</string>
    <string name="key_features_3">Connecting Individuals with Waste Collectors. Trasholution serves as a bridge between individuals and waste collectors. Our app provides a dedicated feature where waste collectors can register their contact information, making it convenient for users to connect with them for responsible waste disposal. By facilitating this connection, we ensure that waste is properly managed and contribute to a cleaner, greener future.</string>
    <string name="the_trasholution_team">The Trasholution Team.</string>
    <string name="select_type_of_waste">Select type of waste</string>
    <string name="by">By: %s</string>
    <string name="decription">Decription</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="setting">Settings</string>
    <string name="collector">Collector</string>
    <string name="back">Back</string>
    <string name="deskripsi">Description</string>
    <string name="kategori_sampah">Your waste categorized as..</string>
    <string name="placeholder_image">placeholder image</string>
    <string name="tablayout">tablayout</string>
    <string name="date">Date</string>
    <string name="article_image">article image</string>
    <string name="add_location">Add your current position as your location?</string>
    <string name="logout_success">Logout Successful</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="connection_error">Connection Error</string>
    <string name="failed_to_get_image">Failed to get image.</string>
    <string name="failed_to_start_camera">Failed to launch camera.</string>
    <string name="collector_deleted">Collector Successfully Deleted</string>
    <string name="update_collector_success">Collector Successfully Updated</string>
    <string name="collector_add_success">Collector Successfully Added</string>
    <string name="have_no_permission">Don\'t get a permission</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="artikel_up_succ">Article Added Successfully</string>
    <string name="add_article_fail">Failed to Add Article</string>
    <string name="select_file">Please select a file first</string>
    <string name="invalid_email_pass">Invalid email or password</string>
    <string name="start">Start</string>
    <string name="language">Language</string>
    <string name="emailalreadyexist">Username or Email already exist!</string>
    <string name="waste_type">Type of waste</string>
    <string name="no_copied">Number copied to clipboard!</string>
</resources>